--- a/HFC/HFC.csproj
+++ b/HFC/HFC.csproj
@@ -246,6 +246,12 @@
     <Compile Include="Forms\frmDHCPCustomer.Designer.cs">
       <DependentUpon>frmDHCPCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\frmDHCPCustomer_Update.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmDHCPCustomer_Update.Designer.cs">
+      <DependentUpon>frmDHCPCustomer_Update.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\frmDHCPService.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -412,6 +418,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmDHCPCustomer.resx">
       <DependentUpon>frmDHCPCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\frmDHCPCustomer_Update.resx">
+      <DependentUpon>frmDHCPCustomer_Update.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmDHCPService.resx">
       <DependentUpon>frmDHCPService.cs</DependentUpon>
