--- a/HFC/Properties/Settings.settings
+++ b/HFC/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="HRM.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="HFC.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="ITProConnectionString" Type="(Connection string)" Scope="Application">
@@ -25,6 +25,9 @@
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=IT-PTA\PERFECT;Initial Catalog=HRMExample;Integrated Security=True</Value>
+    </Setting>
+    <Setting Name="aa" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">-1</Value>
     </Setting>
   </Settings>
 </SettingsFile>
