--- a/HFC/HFC.csproj
+++ b/HFC/HFC.csproj
@@ -167,6 +167,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Program Files (x86)\Microsoft SQL Server\100\SDK\Assemblies\Microsoft.SqlServer.SmoExtended.dll</HintPath>
     </Reference>
+    <Reference Include="MySql.Data, Version=6.1.2.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -190,6 +194,7 @@
     <Compile Include="Class\DbAccess.cs" />
     <Compile Include="Class\DHCPRestart.cs" />
     <Compile Include="Class\ExportDataToExcel.cs" />
+    <Compile Include="Class\MySqlConnect.cs" />
     <Compile Include="Class\MyWebServer.cs" />
     <Compile Include="Class\NW_CurrentTrafic.cs" />
     <Compile Include="Class\NW_Device.cs" />
